<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/famous_pop_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView android:id="@+id/famous_pop_scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/famous_pop_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/famous_pop_1"
                style="@style/TextView"
                android:background="@color/famous_pop_text_view"
                android:text = "@string/mj_text_view_content"/>

            <TextView
                android:id="@+id/famous_pop_2"
                style="@style/TextView"
                android:background="@color/famous_pop_text_view"
                android:text = "@string/wh_always_love_yoi"/>

            <TextView
                android:id="@+id/famous_pop_3"
                style="@style/TextView"
                android:background="@color/famous_pop_text_view"
                android:text = "@string/price_daddy_cool"/>

            <TextView
                android:id="@+id/famous_pop_4"
                style="@style/TextView"
                android:background="@color/famous_pop_text_view"
                android:text="@string/madonna_crazy_for_you"/>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:layout_below="@id/famous_pop_scroll_layout"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/go_to_classic"
            style="@style/ButtonStyle"
            android:background="#212121"
            android:text="@string/go_to_classic" />

        <Button
            android:id="@+id/go_to_top40"
            style="@style/ButtonStyle"
            android:layout_toRightOf="@id/go_to_classic"
            android:background="#01579B"
            android:text="@string/go_to_top40" />

        <Button
            android:id="@+id/go_home"
            style="@style/ButtonStyle"
            android:layout_toRightOf="@id/go_to_top40"
            android:background="@color/colorPrimary"
            android:text="@string/go_home" />

    </RelativeLayout>

</RelativeLayout>